# Simple-Reader

./: README.md  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.js  shared.js  svg.css  svg.html  svg.js  utils.js
app/src/main/java/psycho/euphoria/translator/: AppService.java  BlobCache.java  BooksActivity.java  BooksAdapter.java  CustomWebChromeClient.java  CustomWebViewClient.java  DictionaryActivity.java  DictionaryAdapter.java  InputService.java  MainActivity.java  Notes.java  Pagination.java  PublicFileProvider.java  SearchActivity.java  SearchAdapter.java  Shared.java  TranslatorApi.java  Utils.java  WebAppInterface.java  WordIterator.java
app/src/main/jni/: CMakeLists.txt  cameraEngine.cpp  cameraManager.cpp  imageReader.cpp  key.h  nativelib.cpp  server.cpp  shared.cpp  utils.h
app/src/main/res/layout/: float_layout.xml  main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
